grammar/tree-sitter-gql/grammar.js
    source_file: ($) =>
      optional(seq(commaSepSemi($), optional(";"))),

    query: ($) =>
      seq(
        optional($.use_clause),
        choice(seq(repeat($._reading_clause), $.return_clause), repeat1($._reading_clause)),
      ),

    use_clause: ($) => seq(kw("USE"), $.graph_ref),

    graph_ref: ($) =>
      choice(
        kw("CURRENT_PROPERTY_GRAPH"),
        kw("CURRENT_GRAPH"),
        seq(optional(seq(optional(kw("PROPERTY")), kw("GRAPH"))), $.graph_name),
      ),

    _reading_clause: ($) =>
      choice(
        $.match_clause,
        $.insert_clause,
        $.set_clause,
        $.remove_clause,
        $.delete_clause,
        $.call_clause,
        $.unwind_clause,
        $.with_clause,
      ),

    match_clause: ($) =>
      seq(optional(kw("OPTIONAL")), kw("MATCH"), $.pattern, optional($.where_clause)),

    insert_clause: ($) => seq(kw("INSERT"), $.pattern),

    set_clause: ($) => seq(kw("SET"), commaSep1($.set_item)),

    // Three things one item may set, told apart by what follows the
    // name: labels after a colon, the whole record after an equals, one
    // property after a dot.
    set_item: ($) =>
      seq(
        field("name", $._name),
        choice(
          seq(choice(":", kw("IS")), $.label_set),
          seq("=", $.property_map),
          seq(".", field("property", $._name), "=", $._expression),
        ),
      ),

    remove_clause: ($) => seq(kw("REMOVE"), commaSep1($.remove_item)),

    remove_item: ($) =>
      seq(
        field("name", $._name),
        choice(seq(choice(":", kw("IS")), $.label_set), seq(".", field("property", $._name))),
      ),

    // NODETACH is the explicit spelling of the default, which is why
    // both words stand where one word would do.
    delete_clause: ($) =>
      seq(
        optional(choice(kw("DETACH"), kw("NODETACH"))),
        kw("DELETE"),
        commaSep1($.delete_target),
      ),

    delete_target: ($) => choice($.value_block, $.variable),

    // `VALUE { ... }` is a query that answers the elements to delete.
    // VALUE is a name until the brace follows it, the same as `exists`,
    // so this is written as a name and not as a keyword.
    value_block: ($) => prec(2, seq(field("name", $.identifier), "{", $.query, "}")),

    call_clause: ($) =>
      seq(
        kw("CALL"),
        field("name", $._name),
        "(",
        optional(commaSep1($._expression)),
        ")",
        kw("YIELD"),
        commaSep1($.yield_item),
      ),

    yield_item: ($) =>
      seq(field("name", $._name), optional(seq(kw("AS"), field("alias", $._name)))),

    unwind_clause: ($) => seq(kw("UNWIND"), $._expression, kw("AS"), field("name", $._name)),

    with_clause: ($) => seq(kw("WITH"), $.projection, optional($.where_clause)),

    return_clause: ($) => seq(kw("RETURN"), $.projection),

    where_clause: ($) => seq(kw("WHERE"), $._expression),

    projection: ($) =>
      seq(
        optional(kw("DISTINCT")),
        choice("*", $.projection_item),
        repeat(seq(",", $.projection_item)),
        optional($.order_by),
        optional(seq(kw("SKIP"), $._expression)),
        optional(seq(kw("LIMIT"), $._expression)),
      ),

    projection_item: ($) => seq($._expression, optional(seq(kw("AS"), field("alias", $._name)))),

    order_by: ($) => seq(kw("ORDER"), kw("BY"), commaSep1($.sort_item)),

    sort_item: ($) =>
      seq(
        $._expression,
        optional(choice(kw("ASC"), kw("ASCENDING"), kw("DESC"), kw("DESCENDING"))),
        optional($.null_ordering),
      ),

    null_ordering: ($) => seq(kw("NULLS"), choice(kw("FIRST"), kw("LAST"))),

    // Patterns.

    pattern: ($) => commaSep1($.path),

    path: ($) =>
      seq(
        optional(seq(field("name", $._name), "=")),
        optional($.path_prefix),
        $.node,
        repeat(seq($.relationship, $.node)),
      ),

    // The seven path selectors of ISO 16.6, and the mode, which the
    // standard puts inside the prefix rather than behind it: the words
    // come in one order, the selector, then the mode, then PATH or
    // PATHS, then GROUP last of all. PATH and PATHS are noise the
    // standard allows, while GROUP is what tells k lengths from k paths
    // and is the one form whose count may be left out.
    path_prefix: ($) =>
      choice(
        seq(kw("ALL"), optional(kw("SHORTEST")), ...pathTail($)),
        seq(kw("ANY"), choice(kw("SHORTEST"), optional($.integer)), ...pathTail($)),
        seq(
          kw("SHORTEST"),
          choice(
            seq($.integer, ...pathTail($), optional($._group_or_groups)),
            seq(...pathTail($), $._group_or_groups),
          ),
        ),
        seq($.path_mode, optional($._path_or_paths)),
      ),

    _path_or_paths: ($) => choice(kw("PATH"), kw("PATHS")),

    _group_or_groups: ($) => choice(kw("GROUP"), kw("GROUPS")),

    path_mode: ($) => choice(kw("WALK"), kw("TRAIL"), kw("SIMPLE"), kw("ACYCLIC")),

    node: ($) =>
      seq(
        "(",
        optional(field("name", $._name)),
        repeat(seq(":", $.label_expr)),
        optional($.property_map),
        ")",
      ),

    label_expr: ($) => seq($._label_term, repeat(seq("|", $._label_term))),

    _label_term: ($) => seq($._label_factor, repeat(seq("&", $._label_factor))),

    label: ($) => $._name,

    // The seven edge patterns of ISO 18.9 as one production. Both bars
    // are the same character and a tilde takes no arrowhead, which are
    // rules the engine applies after parsing rather than in it.
    relationship: ($) =>
      seq(
        optional("<"),
        $._bar,
        optional(seq(optional($.rel_detail), $._bar)),
        optional(">"),
        optional($.quantifier),
      ),

    // The graph pattern quantifier of ISO 16.10, which says what a hop
    // range inside the brackets says and is the form the standard's own
    // examples are written in.
    quantifier: ($) =>
      choice(
        "+",
        "*",
        seq("{", optional($.integer), optional(seq(",", optional($.integer))), "}"),
      ),

    _bar: ($) => choice("-", "~"),

    rel_detail: ($) =>
      seq(
        "[",
        optional(field("name", $._name)),
        optional(seq(":", $.label, repeat(seq("|", $.label)))),
        optional(seq("*", optional($.hop_range))),
        optional($.property_map),
        "]",
      ),

    hop_range: ($) =>
      choice(seq($.integer, optional(seq("..", optional($.integer)))), seq("..", $.integer)),

    property_map: ($) =>
      seq("{", optional(commaSep1(seq(field("key", $._name), ":", $._expression))), "}"),

    // Expressions, loosest binding first.

    _expression: ($) =>
      choice(
        $.binary_expression,
        $.unary_expression,
        $.is_expression,
        $.property_access,
        $._primary,
      ),

    binary_expression: ($) =>
      choice(
        prec.left(1, seq($._expression, kw("OR"), $._expression)),
        prec.left(2, seq($._expression, kw("XOR"), $._expression)),
        prec.left(3, seq($._expression, kw("AND"), $._expression)),
        prec.left(
          5,
          seq(
            $._expression,
            choice(
              "=",
              "<>",
              "<",
              "<=",
              ">",
              ">=",
              kw("IN"),
              seq(kw("STARTS"), kw("WITH")),
              seq(kw("ENDS"), kw("WITH")),
              kw("CONTAINS"),
            ),
            $._expression,
          ),
        ),
        prec.left(6, seq($._expression, choice("+", "-"), $._expression)),
        prec.left(7, seq($._expression, choice("*", "/", "%"), $._expression)),
      ),

    property_access: ($) => prec.left(9, seq($._expression, ".", field("property", $._name))),

    variable: ($) => $._name,

    // A name with a bracket after it. `PATH` is a name until a bracket
    // follows it, the same way `DATE` is a name until a string does, so
    // which name may stand here is a question for the binder and not
    // for the shape of the text.
    function_call: ($) =>
      prec(
        2,
        seq(
          field("name", $._name),
          "(",
          optional(kw("DISTINCT")),
          optional(choice("*", commaSep1($._expression))),
          ")",
        ),
      ),

    list: ($) => seq("[", optional(commaSep1($._expression)), "]"),

    graph_name: ($) => choice($._name, seq("/", repeat(seq($._name, "/")), $._name)),

    label_set: ($) => seq($.label, repeat(seq("&", $.label))),

    _name: ($) => choice($.identifier, $.quoted_identifier),

    identifier: ($) => /[A-Za-z_][A-Za-z0-9_]*/,

    parameter: ($) => /\$[A-Za-z0-9_]+/,

    literal: ($) =>
      choice(kw("NULL"), kw("TRUE"), kw("FALSE"), $.integer, $.float, $.string),

    // A name and a string is a temporal literal, which is the rule the
    // engine reads by: the name is a type only when a string follows.
    // The name may be two words, because LOCAL and ZONED are halves of
    // a name rather than names of their own.
    integer: ($) => token(choice(/[0-9]+[Mm]?/, /0[xX][0-9a-fA-F]+/, /0[oO][0-7]+/, /0[bB][01]+/)),

    string: ($) =>
      token(
        choice(
          seq("'", repeat(choice(/[^'\\]/, /\\./)), "'"),
          seq('"', repeat(choice(/[^"\\]/, /\\./)), '"'),
          seq("@'", repeat(choice(/[^']/, "''")), "'"),
          seq('@"', repeat(choice(/[^"]/, '""')), '"'),
        ),
      ),
