grammar/tree-sitter-gql/test/corpus/patterns.txt
================================================================================
The four edge patterns that carry an arrowhead
================================================================================

MATCH (a)-[:KNOWS]->(b), (c)<-[:KNOWS]-(d), (e)-[:KNOWS]-(f), (g)-->(h)
RETURN a

--------------------------------------------------------------------------------

(source_file
  (query
    (match_clause
      (pattern
        (path
          (node
            (identifier))
          (relationship
            (rel_detail
              (label
                (identifier))))
          (node
            (identifier)))
        (path
          (node
            (identifier))
          (relationship
            (rel_detail
              (label
                (identifier))))
          (node
            (identifier)))
        (path
          (node
            (identifier))
          (relationship
            (rel_detail
              (label
                (identifier))))
          (node
            (identifier)))
        (path
          (node
            (identifier))
          (relationship)
          (node
            (identifier)))))
    (return_clause
      (projection
        (projection_item
          (variable
            (identifier)))))))

================================================================================
A label expression of conjunction, disjunction and negation
================================================================================

MATCH (n:Person|Robot), (m:!Robot&Employee), (o:%) RETURN n

--------------------------------------------------------------------------------

(source_file
  (query
    (match_clause
      (pattern
        (path
          (node
            (identifier)
            (label_expr
              (label
                (identifier))
              (label
                (identifier)))))
        (path
          (node
            (identifier)
            (label_expr
              (label
                (identifier))
              (label
                (identifier)))))
        (path
          (node
            (identifier)
            (label_expr)))))
    (return_clause
      (projection
        (projection_item
          (variable
            (identifier)))))))

================================================================================
A quantified edge, bounded and unbounded
================================================================================

MATCH (a)-[:KNOWS*]->(b), (c)-[:KNOWS*1..3]->(d), (e)-[r:KNOWS*2..]->(f)
RETURN a

--------------------------------------------------------------------------------

(source_file
  (query
    (match_clause
      (pattern
        (path
          (node
            (identifier))
          (relationship
            (rel_detail
              (label
                (identifier))))
          (node
            (identifier)))
        (path
          (node
            (identifier))
          (relationship
            (rel_detail
              (label
                (identifier))
              (hop_range
                (integer)
                (integer))))
          (node
            (identifier)))
        (path
          (node
            (identifier))
          (relationship
            (rel_detail
              (identifier)
              (label
                (identifier))
              (hop_range
                (integer))))
          (node
            (identifier)))))
    (return_clause
      (projection
        (projection_item
          (variable
            (identifier)))))))

================================================================================
A path bound to a name, with a selector and a mode
================================================================================

MATCH p = ANY SHORTEST TRAIL (a)-[:KNOWS]->(b) RETURN p

--------------------------------------------------------------------------------

(source_file
  (query
    (match_clause
      (pattern
        (path
          (identifier)
          (path_prefix
            (path_mode))
          (node
            (identifier))
          (relationship
            (rel_detail
              (label
                (identifier))))
          (node
            (identifier)))))
    (return_clause
      (projection
        (projection_item
          (variable
            (identifier)))))))

================================================================================
An edge written with a tilde takes no arrowhead
================================================================================

MATCH (a)~[:KNOWS]~(b) RETURN a

--------------------------------------------------------------------------------

(source_file
  (query
    (match_clause
      (pattern
        (path
          (node
            (identifier))
          (relationship
            (rel_detail
              (label
                (identifier))))
          (node
            (identifier)))))
    (return_clause
      (projection
        (projection_item
          (variable
            (identifier)))))))

================================================================================
A counted shortest group selector, and a quantifier behind the arrow
================================================================================

MATCH SHORTEST 2 GROUPS (a)-[:KNOWS]->{1,3}(b) RETURN b

--------------------------------------------------------------------------------

(source_file
  (query
    (match_clause
      (pattern
        (path
          (path_prefix
            (integer))
          (node
            (identifier))
          (relationship
            (rel_detail
              (label
                (identifier)))
            (quantifier
              (integer)
              (integer)))
          (node
            (identifier)))))
    (return_clause
      (projection
        (projection_item
          (variable
            (identifier)))))))

================================================================================
The path mode sits inside the prefix, and GROUPS comes after it
================================================================================

MATCH SHORTEST ACYCLIC PATHS GROUPS (a)-[:KNOWS]->+(b) RETURN b

--------------------------------------------------------------------------------

(source_file
  (query
    (match_clause
      (pattern
        (path
          (path_prefix
            (path_mode))
          (node
            (identifier))
          (relationship
            (rel_detail
              (label
                (identifier)))
            (quantifier))
          (node
            (identifier)))))
    (return_clause
      (projection
        (projection_item
          (variable
            (identifier)))))))

================================================================================
A KEEP behind the patterns says the prefix for every one of them
================================================================================

MATCH (a)-[:KNOWS]->+(b), (b)-[:KNOWS]->+(c) KEEP ALL SHORTEST RETURN c

--------------------------------------------------------------------------------

(source_file
  (query
    (match_clause
      (pattern
        (path
          (node
            (identifier))
          (relationship
            (rel_detail
              (label
                (identifier)))
            (quantifier))
          (node
            (identifier)))
        (path
          (node
            (identifier))
          (relationship
            (rel_detail
              (label
                (identifier)))
            (quantifier))
          (node
            (identifier))))
      (keep_clause
        (path_prefix)))
    (return_clause
      (projection
        (projection_item
          (variable
            (identifier)))))))

================================================================================
A match mode in front of a pattern list
================================================================================

MATCH REPEATABLE ELEMENTS (a)-[e:KNOWS]->(b), (a)-[f:KNOWS]->(b) RETURN e

--------------------------------------------------------------------------------

(source_file
  (query
    (match_clause
      (match_mode)
      (pattern
        (path
          (node
            (identifier))
          (relationship
            (rel_detail
              (identifier)
              (label
                (identifier))))
          (node
            (identifier)))
        (path
          (node
            (identifier))
          (relationship
            (rel_detail
              (identifier)
              (label
                (identifier))))
          (node
            (identifier)))))
    (return_clause
      (projection
        (projection_item
          (variable
            (identifier)))))))

================================================================================
A match mode written with the singular noun and BINDINGS behind it
================================================================================

MATCH DIFFERENT EDGE BINDINGS (a)-[:KNOWS]->(b) RETURN a

--------------------------------------------------------------------------------

(source_file
  (query
    (match_clause
      (match_mode)
      (pattern
        (path
          (node
            (identifier))
          (relationship
            (rel_detail
              (label
                (identifier))))
          (node
            (identifier)))))
    (return_clause
      (projection
        (projection_item
          (variable
            (identifier)))))))

================================================================================
A parenthesized path pattern with a name, a mode and a condition
================================================================================

MATCH (p = TRAIL (a)-[:KNOWS]->(b) WHERE b.age > a.age) RETURN p

--------------------------------------------------------------------------------

(source_file
  (query
    (match_clause
      (pattern
        (path
          (subpath
            (identifier)
            (path_mode)
            (node
              (identifier))
            (relationship
              (rel_detail
                (label
                  (identifier))))
            (node
              (identifier))
            (where_clause
              (binary_expression
                (property_access
                  (variable
                    (identifier))
                  (identifier))
                (property_access
                  (variable
                    (identifier))
                  (identifier))))))))
    (return_clause
      (projection
        (projection_item
          (variable
            (identifier)))))))

================================================================================
Two stretches of a pattern written against one another
================================================================================

MATCH (a)-[:KNOWS]->(b) ((b)-[:KNOWS]->(c)) RETURN c

--------------------------------------------------------------------------------

(source_file
  (query
    (match_clause
      (pattern
        (path
          (node
            (identifier))
          (relationship
            (rel_detail
              (label
                (identifier))))
          (node
            (identifier))
          (subpath
            (node
              (identifier))
            (relationship
              (rel_detail
                (label
                  (identifier))))
            (node
              (identifier))))))
    (return_clause
      (projection
        (projection_item
          (variable
            (identifier)))))))

================================================================================
A quantifier behind a parenthesized path pattern
================================================================================

MATCH (a)((x)-[:LINK]->(y)){2}(b) RETURN SUM(y.step)

--------------------------------------------------------------------------------

(source_file
  (query
    (match_clause
      (pattern
        (path
          (node
            (identifier))
          (subpath
            (node
              (identifier))
            (relationship
              (rel_detail
                (label
                  (identifier))))
            (node
              (identifier)))
          (quantifier
            (integer))
          (node
            (identifier)))))
    (return_clause
      (projection
        (projection_item
          (function_call
            (identifier)
            (property_access
              (variable
                (identifier))
              (identifier))))))))

================================================================================
An element pattern predicate on a node and on an edge
================================================================================

MATCH (a:Step WHERE a.step = 0)-[l:LINK WHERE l.w > 1]->(b:Step) RETURN b

--------------------------------------------------------------------------------

(source_file
  (query
    (match_clause
      (pattern
        (path
          (node
            name: (identifier)
            (label_expr
              (label
                (identifier)))
            (binary_expression
              (property_access
                (variable
                  (identifier))
                property: (identifier))
              (literal
                (integer))))
          (relationship
            (rel_detail
              name: (identifier)
              (label
                (identifier))
              (binary_expression
                (property_access
                  (variable
                    (identifier))
                  property: (identifier))
                (literal
                  (integer)))))
          (node
            name: (identifier)
            (label_expr
              (label
                (identifier)))))))
    (return_clause
      (projection
        (projection_item
          (variable
            (identifier)))))))
