grammar/tree-sitter-gql/test/corpus/writes.txt
================================================================================
An insert with no projection after it
================================================================================

INSERT (p:Person {name: 'Ada', born: 1815})

--------------------------------------------------------------------------------

(source_file
  (query
    (insert_clause
      (pattern
        (path
          (node
            (identifier)
            (label_expr
              (label
                (identifier)))
            (property_map
              (identifier)
              (literal
                (string))
              (identifier)
              (literal
                (integer)))))))))

================================================================================
A property, a whole record, and a label set
================================================================================

MATCH (p:Person) SET p.age = 30, p = {name: 'Ada'}, p:Employee&Person RETURN p

--------------------------------------------------------------------------------

(source_file
  (query
    (match_clause
      (pattern
        (path
          (node
            (identifier)
            (label_expr
              (label
                (identifier)))))))
    (set_clause
      (set_item
        (identifier)
        (identifier)
        (literal
          (integer)))
      (set_item
        (identifier)
        (property_map
          (identifier)
          (literal
            (string))))
      (set_item
        (identifier)
        (label_set
          (label
            (identifier))
          (label
            (identifier)))))
    (return_clause
      (projection
        (projection_item
          (variable
            (identifier)))))))

================================================================================
A property and a label taken away
================================================================================

MATCH (p:Person) REMOVE p.age, p:Employee RETURN p

--------------------------------------------------------------------------------

(source_file
  (query
    (match_clause
      (pattern
        (path
          (node
            (identifier)
            (label_expr
              (label
                (identifier)))))))
    (remove_clause
      (remove_item
        (identifier)
        (identifier))
      (remove_item
        (identifier)
        (label_set
          (label
            (identifier)))))
    (return_clause
      (projection
        (projection_item
          (variable
            (identifier)))))))

================================================================================
A delete, with and without its edges
================================================================================

MATCH (p:Person) DETACH DELETE p

--------------------------------------------------------------------------------

(source_file
  (query
    (match_clause
      (pattern
        (path
          (node
            (identifier)
            (label_expr
              (label
                (identifier)))))))
    (delete_clause
      (delete_target
        (variable
          (identifier))))))

================================================================================
A delete of what a nested query answers
================================================================================

DELETE value { MATCH (p:Person) WHERE p.age > 100 RETURN p }

--------------------------------------------------------------------------------

(source_file
  (query
    (delete_clause
      (delete_target
        (value_block
          (identifier)
          (query
            (match_clause
              (pattern
                (path
                  (node
                    (identifier)
                    (label_expr
                      (label
                        (identifier))))))
              (where_clause
                (binary_expression
                  (property_access
                    (variable
                      (identifier))
                    (identifier))
                  (literal
                    (integer)))))
            (return_clause
              (projection
                (projection_item
                  (variable
                    (identifier)))))))))))

================================================================================
An algorithm called and its columns taken
================================================================================

CALL pagerank('KNOWS') YIELD node AS n, score RETURN n, score ORDER BY score DESC

--------------------------------------------------------------------------------

(source_file
  (query
    (call_clause
      (identifier)
      (literal
        (string))
      (yield_item
        (identifier)
        (identifier))
      (yield_item
        (identifier)))
    (return_clause
      (projection
        (projection_item
          (variable
            (identifier)))
        (projection_item
          (variable
            (identifier)))
        (order_by
          (sort_item
            (variable
              (identifier))))))))
